Fixed shifting when alert is active

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  padding: 0 !important;
   overflow: visible !important;
   transition: all 0.25s;
 }
